--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -1,15 +1,41 @@
 @CHARSET "UTF-8";
 
-html, body, #main_map {
-  width: 100%;
-  height: 93%;
-  margin: 0;
-  padding: 0;
+html, body {
+	width: 100%;
+	height:100%;
+}
+
+
+#top_div {
+ 	width:100%;
+ 	height:87%;
+}
+
+#main_map {
+  	width: 80%;
+  	height: 100%;
+  	float: left;
+}
+
+#right_panel {
+	width:19%;
+	height:100%;
+	float: right;
+}
+
+#filters_top_panel {
+	height: 49%;
+	background: black;
+}
+
+#pointmod_bottom_panel {
+	height: 49%;
+	background: blue;
 }
 
 #bottom_bar_chart {
 	width:100%;
-	height:32%;	
+	height:15%;	
 }
 
 svg#bottom_bar_chart_svg{
