--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -33,9 +33,22 @@ html, body {
 	background: blue;
 }
 
-#bottom_bar_chart {
+#bottom_div {
 	width:100%;
-	height:15%;	
+	height:15%;
+}
+
+#bottom_bar_chart {
+	width:90%;
+	height:100%;
+	float: left;	
+}
+
+#bottom_dropdown {
+	width:9%;
+	height:100%;
+	background: red;
+	float: right;
 }
 
 svg#bottom_bar_chart_svg{
