Radio buttons for bottom panel First step: change points color

--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -2,24 +2,23 @@
 
 html, body {
 	width: 100%;
-	height:100%;
+	height: 100%;
 }
 
-
 #top_div {
- 	width:100%;
- 	height:87%;
+	width: 100%;
+	height: 87%;
 }
 
 #main_map {
-  	width: 80%;
-  	height: 100%;
-  	float: left;
+	width: 80%;
+	height: 100%;
+	float: left;
 }
 
 #right_panel {
-	width:19%;
-	height:100%;
+	width: 19%;
+	height: 100%;
 	float: right;
 }
 
@@ -29,78 +28,106 @@ html, body {
 }
 
 #pointmod_bottom_panel {
-	height: 49%;
-	background: blue;
+	height: 40%;
+	background-color: #4B4D65;
+}
+.section {
+  padding: 10%;
+  padding-left: 65px;
+}
+.section input[type="radio"]{
+  display: none;
+}
+.container {
+  margin-bottom: 10px;
+}
+.container label {
+  position: relative;
 }
 
-#bottom_div {
-	width:100%;
-	height:15%;
+/* Base styles for spans */
+.container span::before,
+.container span::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+/* Radio buttons */
+.container span.radio:hover {
+  cursor: pointer;
+}
+.container span.radio::before {
+  left: -52px;
+  width: 45px;
+  height: 25px;
+  background-color: #A8AAC1;
+  border-radius: 50px;
+}
+.container span.radio::after {
+  left: -49px;
+  width: 17px;
+  height: 17px;
+  border-radius: 10px;
+  background-color: #6C788A;
+  transition: left .25s, background-color .25s;
+}
+input[type="radio"]:checked + label span.radio::after {
+  left: -27px;
+  background-color: #EBFF43;
 }
 
 #bottom_bar_chart {
-	width:90%;
-	height:100%;
-	float: left;	
+	width: 100%;
+	height: 15%;
 }
 
-#bottom_dropdown {
-	width:9%;
-	height:100%;
-	background: red;
-	float: right;
+svg#bottom_bar_chart_svg {
+	display: inline-block;
+	position: absolute;
+	top: 10px;
+	left: 0;
 }
-
-svg#bottom_bar_chart_svg{
-    display: inline-block;
-    position: absolute;
-    top: 10px;
-    left: 0;
-}
-
 
 .stations, .stations svg {
-  position: absolute;
+	position: absolute;
 }
 
 .stations svg {
-  width: 100px;
-  height: 30px;
-  padding-right: 000px;
-  font: 10px sans-serif;
+	width: 100px;
+	height: 30px;
+	padding-right: 000px;
+	font: 10px sans-serif;
 }
 
 .stations circle {
-  fill: brown;
-  stroke: black;
-  stroke-width: 1.5px;
+	fill: red;
+	stroke: black;
+	stroke-width: 0.5px;
 }
-
-
 
 .axis--grid .domain {
-  fill: #ddd;
-  stroke: none;
+	fill: #ddd;
+	stroke: none;
 }
 
-.axis--x .domain,
-.axis--grid .tick line {
-  stroke: #fff;
+.axis--x .domain, .axis--grid .tick line {
+	stroke: #fff;
 }
 
 .axis--grid .tick--minor line {
-  stroke-opacity: .5;
+	stroke-opacity: .5;
 }
 
 .area {
-  fill: steelblue;
-  clip-path: url(#clip);
+	fill: steelblue;
+	clip-path: url(#clip);
 }
 
 .zoom {
-  cursor: move;
-  fill: none;
-  pointer-events: all;
+	cursor: move;
+	fill: none;
+	pointer-events: all;
 }
-
-
