--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -79,9 +79,26 @@ input[type="radio"]:checked + label span.radio::after {
   background-color: #EBFF43;
 }
 
-#bottom_bar_chart {
+#bottom_div {
 	width: 100%;
 	height: 15%;
+}
+
+#bottom_bar_chart {
+	width:90%;
+	height: 100%;
+	float:left;
+}
+
+#bottom_dropdown {
+	width: 10%;
+	height: 100%;
+	float: right;
+}
+
+#bottom_chart_options {
+	display: block;
+	margin: auto;
 }
 
 svg#bottom_bar_chart_svg {
