--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -99,6 +99,11 @@ input[type="radio"]:checked + label span.radio::after {
 #bottom_chart_options {
 	display: block;
 	margin: auto;
+	font-size: 11px;
+}
+
+#maxDate,#minDate {
+	font-size: 11px;
 }
 
 svg#bottom_bar_chart_svg {
