--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -23,9 +23,34 @@ html, body {
 }
 
 #filters_top_panel {
-	height: 49%;
-	background: black;
+	height: 49%;	
 }
+
+#filter_variable_options {
+	font-size: 11px;
+	width: 45%;
+	height: 9%;
+	float:left;
+}
+
+#add_filter {
+	width: 45%;
+	float:right;
+	cursor: pointer;
+}
+
+
+#filter_values_options {
+	width: 90%;
+	height: 40%;
+	overflow-y: scroll;
+}
+
+#filters_table {
+	width:100%;
+	height:50%;
+}
+
 
 #pointmod_bottom_panel {
 	height: 40%;
