--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -49,8 +49,33 @@ html, body {
 #filters_table {
 	width:100%;
 	height:50%;
+	overflow-y: scroll;
 }
 
+table {
+    font-family: arial, sans-serif;
+    font-size: 12px;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+.close_button{
+	background-color: red;
+	padding: 0px;
+	margin: 0px;
+	border: none;
+	border-radius:10px;
+	border: none;
+}
 
 #pointmod_bottom_panel {
 	height: 40%;
