--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -132,7 +132,20 @@ input[type="radio"]:checked + label span.radio::after {
 
 #bottom_div {
 	width: 100%;
-	height: 15%;
+	height: 30%;
+}
+
+#bottom_div_left {
+	width: 49%;
+	height:100%;
+	float:left;
+}
+
+#bottom_div_right {
+	background: blue;
+	float: right;
+	width: 49%;
+	height:100%;
 }
 
 #bottom_bar_chart {
