--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -81,6 +81,7 @@ tr:nth-child(even) {
 #pointmod_bottom_panel {
 	height: 40%;
 	background-color: #4B4D65;
+	overflow-y: scroll;
 }
 .section {
   padding: 10%;
@@ -142,7 +143,6 @@ input[type="radio"]:checked + label span.radio::after {
 }
 
 #bottom_div_right {
-	background: blue;
 	float: right;
 	width: 49%;
 	height:100%;
@@ -217,3 +217,39 @@ svg#bottom_bar_chart_svg {
 	fill: none;
 	pointer-events: all;
 }
+
+
+
+svg {
+  font: 10px sans-serif;
+}
+
+.background path {
+  fill: none;
+  stroke: #ddd;
+  shape-rendering: crispEdges;
+}
+
+.foreground path {
+  fill: none;
+  stroke: steelblue;
+}
+
+.brush .extent {
+  fill-opacity: .3;
+  stroke: #fff;
+  shape-rendering: crispEdges;
+}
+
+.axis line,
+.axis path {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+  cursor: move;
+}
+
