--- a/WebContent/accidents_bcn_style.css
+++ b/WebContent/accidents_bcn_style.css
@@ -21,6 +21,11 @@ html, body {
 	vertical-align: middle;
 }
 
+.legend_color {
+	width:5px;
+	height:5px;
+}
+
 #top_div {
 	width: 100%;
 	height: 87%;
